Vervalredenenumeratie uit RGBZ als read-only weergave veld
