# src/swagger2.0.json
@@ -1030,6 +1030,16 @@
                         "ingetrokken_belanghebbende"
                     ]
                 },
+                "vervalredenWeergave": {
+                    "title": "Vervalreden weergave",
+                    "type": "string",
+                    "enum": [
+                        "Besluit met tijdelijke werking",
+                        "Besluit ingetrokken door overheid",
+                        "Besluit ingetrokken o.v.v. belanghebbende"
+                    ],
+                    "readOnly": true
+                },
                 "publicatiedatum": {
                     "title": "Publicatiedatum",
                     "description": "Datum waarop het besluit gepubliceerd wordt.",
